--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
 *.class
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+.settings/
+.gradle/
+gradle/
+.project
+.classpath
+bin/
+build/
+.DS_Store
 
 # Package Files #
 *.jar
