--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ repositories {
 
 dependencies {
     testCompile 'org.testng:testng:6.10'
-    testCompile 'org.jmockit:jmockit:1.30'
+    testCompile "org.mockito:mockito-core:2.6.8"
     testCompile 'org.yaml:snakeyaml:1.17'
 }
 
