--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,17 @@
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.2.1"
+    }
+}
+
 apply plugin: 'java'
+apply plugin: 'jacoco'
+apply plugin: 'org.sonarqube'
 
 repositories {
     mavenCentral()
@@ -10,8 +23,27 @@ dependencies {
     testCompile 'org.yaml:snakeyaml:1.17'
 }
 
+jacoco {
+    toolVersion = "0.7.6.201602180812"
+    reportsDir = file("$buildDir/jacoco/test.exec")
+}
+
+jacocoTestReport {
+    additionalSourceDirs = files(sourceSets.main.allJava.srcDirs)
+    reports {
+        html.destination "${buildDir}/jacoco/html"
+    }
+}
+
+
 test {
+
     useTestNG() {
-        suites 'src/test/resources/testng.yaml'
+        suites 'src/test/resources/employee-test-config.yaml'
+    }
+
+    jacoco {
+        destinationFile = file("$buildDir/jacoco/test.exec")
+        classDumpFile = file("$buildDir/build/classes/test")
     }
 }
